start flask work

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pong</title>
+    <title>{{title}}</title>
 </head>
 <body>    
     <canvas id="canvas" width="640" height="480"></canvas>
