--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     score1=score2=0;
     
     // score to play to
-    win_point = 1;
+    win_point = {{win_point}}
     
     // initial velocity of ball
     xv=yv=10;
