--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -10,16 +10,25 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+        // declare globals to control sounds
+        var play_fx = true;
+        var play_music = true;
+    </script>
 </head>
     <body>
         <nav class="navbar navbar-inverse" style="border-radius:0px;">
-          <div class="container-fluid" style="background:black;">
-            <ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="/game">Game</a></li>
-              <li><a href="/leader_board">Leader Board</a></li>
-            </ul>
-          </div>
+            <div class="container-fluid" style="background:black;">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/game"> Game</a></li>
+                    <li><a href="/leader_board">Leader Board</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li onclick="play_fx = !play_fx; console.log(play_fx)"><a><span class="glyphicon glyphicon-volume-up"></span> Sound</a></li>
+                    <li onclick="play_music = !play_music; console.log(play_music)"><a><span class="glyphicon glyphicon-headphones"></span> Music</a></li>
+                </ul>
+            </div>
         </nav>
     {% block content %}{% endblock %}
     </body>
