--- a/templates/game.html
+++ b/templates/game.html
@@ -42,7 +42,7 @@
         //user controls
         canvas.addEventListener("mousemove", function(e){
             // keep center of paddle 1 at location of users mouse
-            p1y = e.clientY-ph/2;
+            p1y = e.clientY-ph;
         });
     }
     
@@ -106,7 +106,9 @@
             if(by>p1y && by <p1y+ph){
 
                 //play rebound sound
-                rebound_sound.play();
+                if(play_fx){
+                    rebound_sound.play();
+                }
 
                 // reverse x velocity
                 xv = -xv;
@@ -128,7 +130,9 @@
             if(by>p2y && by <p2y+ph){
 
                 //play rebound sound
-                rebound_sound.play();
+                if(play_fx){
+                    rebound_sound.play();
+                }
 
                 // reverse x velocity
                 xv = -xv;
