--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -14,6 +14,16 @@
         // declare globals to control sounds
         var play_fx = true;
         var play_music = true;
+
+        var toggle_fx = function(){
+            play_fx = !play_fx;
+                if(play_fx){
+                    document.getElementById('fx_icon').className = 'glyphicon glyphicon-volume-up';
+                }
+                else{
+                    document.getElementById('fx_icon').className = 'glyphicon glyphicon-volume-off';
+                }
+        }
     </script>
 </head>
     <body>
@@ -25,7 +35,7 @@
                     <li><a href="/leader_board">Leader Board</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li onclick="play_fx = !play_fx; console.log(play_fx)"><a><span class="glyphicon glyphicon-volume-up"></span> Sound</a></li>
+                    <li onclick="toggle_fx()"><a><span id="fx_icon" class="glyphicon glyphicon-volume"></span> Sound</a></li>
                     <li onclick="play_music = !play_music; console.log(play_music)"><a><span class="glyphicon glyphicon-headphones"></span> Music</a></li>
                 </ul>
             </div>
