submit score sort of working, need to update form handling errors

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -19,7 +19,7 @@
       url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
     <script>
         // declare globals to control sounds
-        var play_fx = true;
+        var play_fx = false;
         var play_music = true;
 
         var toggle_fx = function(){
