--- a/templates/game.html
+++ b/templates/game.html
@@ -191,7 +191,7 @@
         
     </script>
 
-<form id="form-hidden" class="form-horizontal" role="form" method="post" action="" name="submit">
+<form id="form-hidden" class="form-horizontal" role="form" method="post" action="">
     <div class="form-group">
         <p class="form-inputs">
             {{ form.username(placeholder="name") }}
