--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,32 @@
     margin: 30px;
 }
 
+.container{
+    width:40%;
+    margin-left:30%;
+}
+
 #form-hidden{
     display: none;
 }
 
 #score{
     display: none;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(odd){background-color: #f2f2f2}
+
+th {
+    background-color: black;
+    color: white;
 }
