remove pop ups and redundant submit page

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -15,8 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{
-      url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <script>
         // declare globals to control sounds
         var play_fx = false;
