--- a/templates/leader_board.html
+++ b/templates/leader_board.html
@@ -12,8 +12,11 @@
         {% for value in leaderboard %}
             <tr>
                 {% if value[0] == highlight %}
-                    <td style="background-color: #4CAF50">{{value[0]}}</td>
+                    <td id="active" style="background-color: #4CAF50">{{value[0]}}</td>
                     <td style="background-color: #4CAF50; text-align: right">{{value[1]}}</td>
+                    <script>
+                        document.getElementById('active').scrollIntoView();
+                    </script>
                 {% else %}
                     <td>{{value[0]}}</td>
                     <td style="text-align: right">{{value[1]}}</td>
