--- a/templates/leader_board.html
+++ b/templates/leader_board.html
@@ -5,20 +5,23 @@
 <div class="container">
     <table>
         <tr>
+            <th>Rank</th>
             <th>Name</th>
             <th style="text-align: right">Score</th>
         </tr>
         {% for value in leaderboard %}
             <tr>
-                {% if value[0] == highlight %}
-                    <td id="active" style="background-color: #4CAF50">{{value[0]}}</td>
-                    <td style="background-color: #4CAF50; text-align: right">{{value[1]}}</td>
+                {% if value[1][0] == highlight %}
+                    <td id="active" style="background-color: #4CAF50">{{value[0]+1}}</td>
+                    <td style="background-color: #4CAF50">{{value[1][0]}}</td>
+                    <td style="background-color: #4CAF50; text-align: right">{{value[1][1]}}</td>
                     <script>
-                        document.getElementById('active').scrollIntoView();
+                        document.getElementById("active").scrollIntoView();
                     </script>
                 {% else %}
-                    <td>{{value[0]}}</td>
-                    <td style="text-align: right">{{value[1]}}</td>
+                    <td>{{value[0]+1}}</td>
+                    <td>{{value[1][0]}}</td>
+                    <td style="text-align: right">{{value[1][1]}}</td>
                 {% endif %}
 
             </tr>
