--- a/templates/game.html
+++ b/templates/game.html
@@ -4,6 +4,22 @@
 <div class="container">
     <canvas id="canvas" width="640" height="480"></canvas>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    <form id="form-hidden" class="form-horizontal" role="form" method="post">
+        <div class="form-group">
+            <p class="form-inputs">
+                <span id="show_score"></span>
+                {{ form.csrf_token }}
+                {{ form.username(placeholder="name") }}
+                <span id="errors"></span>
+                {{ form.score(id="score") }}
+                <br>
+                <input id="submitButton" type="submit" value="submit score" class="btn btn-default">
+                <input type="button" value="play again" class="btn btn-default" onclick="play_again()">
+                <!--<div class="g-recaptcha" data-sitekey="6LfWYRAUAAAAAJDDuygfayoQW-JvzYLb81TEUiLp"></div>-->
+        </div>
+    </form>
+
     <script>
     // global variable for setinterval 
     var stop;
@@ -32,7 +48,10 @@
         
     
     // speed ai moves paddle
-    var ais=10;
+    var ais={{ai_speed}};
+
+    // cast python list to json
+    var names={{names|tojson}};
 
     // get score and add value to hidden form
     var calculate_score = function() {
@@ -80,6 +99,7 @@
             // keep center of paddle 1 at location of users mouse
             p1y = e.clientY-ph;
         });
+
     }
     
     function reset(){
@@ -191,26 +211,23 @@
         canvas_context.fillText(score2, canvas.width-100, 100);
         
     }
-        
+
+
+    // continuously validate form input, show user that a unique name must be chosen
+    $("#username").change(function(){
+        if (names.includes($("#username").val())){
+            // stop user from submitting form with invalid name
+            $("#errors").text("Sorry, this name is taken").css({"color":"red"});
+            $('#submitButton').attr("disabled", true);
+        }
+        else{
+            // allow user to submit form again
+            $("#errors").text("This name is free!").css({"color":"green"});
+            $('#submitButton').attr("disabled", false);
+        }
+    });
     </script>
 
-    <form id="form-hidden" class="form-horizontal" role="form" method="post" action="">
-        <div class="form-group">
-            <p class="form-inputs">
-                <span id="show_score"></span>
-                {{ form.csrf_token }}
-                {{ form.username(placeholder="name", value=anon) }}
-                {% for error in form.username.errors %}
-                    <span style="color: red;">* {{ error }}</span>
-                {% endfor %}
-                {{ form.score(id="score") }}
-                <br>
-                <input type="submit" value="submit score" class="btn btn-default">
-                <input type="button" value="play again" class="btn btn-default" onclick="play_again()">
-                <input type="button" value="quit" class="btn btn-default" onclick="go_home()">
-                <!--<div class="g-recaptcha" data-sitekey="6LfWYRAUAAAAAJDDuygfayoQW-JvzYLb81TEUiLp"></div>-->
-        </div>
-    </form>
 </div>
 
 {% endblock %}
